wrapped interest pairs in spans to ensure that pairs don't break to new line

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -65,6 +65,10 @@ img#img-aboutwords {
   padding: 0 35px;
 }
 
+span#interest-pair {
+  white-space: nowrap;
+}
+
 //#specialties {
 //  width: 50%;
 //  float: left;
